--- a/package.json
+++ b/package.json
@@ -1,38 +1,37 @@
 {
   "name": "airose-studio",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "prisma:generate": "npx prisma generate --schema=prisma/schema.prisma",
+    "prisma:migrate": "npx prisma migrate dev --schema=prisma/schema.prisma --name init",
+    "prisma:pull": "npx prisma db pull --schema=prisma/schema.prisma",
+    "prisma:push": "npx prisma db push --schema=prisma/schema.prisma",
+    "db:gen": "npm run prisma:generate",
+    "db:sync": "npm run prisma:migrate",
+    "db:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.11.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
-    "framer-motion": "^12.23.24",
-    "next": "^14.2.5",
-    "next-auth": "^4.24.11",
-    "nodemailer": "^6.10.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "bcryptjs": "^2.4.3",
+    "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.15",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/bcrypt": "^6.0.0",
-    "@types/next-auth": "^3.13.0",
-    "@types/node": "^20.19.23",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.6",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
     "prisma": "^6.18.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.3.3",
+    "ts-node": "^10.9.2"
   }
 }
