--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^12.23.24",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.15",
     "react": "^18.3.1",
@@ -31,7 +32,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
     "prisma": "^6.18.0",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
