--- a/package.json
+++ b/package.json
@@ -3,40 +3,40 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma:generate": "npx prisma generate --schema=prisma/schema.prisma",
-    "prisma:migrate": "npx prisma migrate dev --schema=prisma/schema.prisma --name init",
-    "prisma:pull": "npx prisma db pull --schema=prisma/schema.prisma",
-    "prisma:push": "npx prisma db push --schema=prisma/schema.prisma",
-    "db:gen": "npm run prisma:generate",
-    "db:sync": "npm run prisma:migrate",
-    "db:seed": "ts-node prisma/seed.ts"
+    "db:push": "npx prisma db push",
+    "postinstall": "prisma generate",
+    "update-password": "tsx scripts/update-admin-password.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^11.0.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
-    "next-auth": "^5.0.0-beta.15",
+    "postcss": "^8.4.47",
+    "prisma": "^6.18.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.16",
     "@types/bcryptjs": "^2.4.2",
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.57.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "20.19.23",
+    "@types/react": "18.3.26",
+    "@types/react-dom": "^18.3.2",
+    "dotenv-cli": "^10.0.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.5",
-    "postcss": "^8.5.6",
-    "prisma": "^6.18.0",
-    "tailwindcss": "^4.1.16",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "tsx": "^4.20.6",
+    "typescript": "^5.6.3"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
   }
 }
