--- a/package.json
+++ b/package.json
@@ -13,16 +13,13 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
-    "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.0.3",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
-    "postcss": "^8.4.47",
     "prisma": "^6.18.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.14"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -30,9 +27,12 @@
     "@types/node": "20.19.23",
     "@types/react": "18.3.26",
     "@types/react-dom": "^18.3.2",
+    "autoprefixer": "^10.4.20",
     "dotenv-cli": "^10.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.5",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.13",
     "tsx": "^4.20.6",
     "typescript": "^5.6.3"
   },
