--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "bcryptjs": "^2.4.3",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.18.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.548.0",
     "next": "14.2.5",
     "prisma": "^6.18.0",
     "react": "^18.3.1",
