--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "framer-motion": "^11.18.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.548.0",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "prisma": "^6.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -25,19 +25,35 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "20.19.23",
+    "@types/node": "20.19.24",
     "@types/react": "18.3.26",
-    "@types/react-dom": "^18.3.2",
-    "autoprefixer": "^10.4.20",
+    "@types/react-dom": "^18.3.7",
+    "autoprefixer": "^10.4.21",
     "dotenv-cli": "^10.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.5",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.13",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "tsx": "^4.20.6",
-    "typescript": "^5.6.3"
+    "typescript": "^5.9.3"
   },
   "prisma": {
     "schema": "prisma/schema.prisma"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "next.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ianroseaaronmendoza-cmd/airose-studio.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ianroseaaronmendoza-cmd/airose-studio/issues"
+  },
+  "homepage": "https://github.com/ianroseaaronmendoza-cmd/airose-studio#readme"
 }
