--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.18.2",
     "jsonwebtoken": "^9.0.2",
