--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@tailwindcss/cli": "^4.1.16",
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.18.2",
@@ -35,7 +36,7 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.5",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.1.16",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
