--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,14 +10,13 @@
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx", // Ensure using the new JSX transform for React 17+
+    "jsx": "react-jsx", // React 17+ JSX transform
     "incremental": true,
     "baseUrl": ".",
     "paths": {
@@ -32,7 +31,7 @@
     ]
   },
   "include": [
-    "next-env.d.ts", // Ensure Next.js environment is included
+    "next-env.d.ts",  // Ensure Next.js types are included
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
