Milestone: Poems module stable v1.0

--- a/package.json
+++ b/package.json
@@ -1,62 +1,69 @@
 {
   "name": "airose-studio",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
+  "description": "Airose Studio — React Router + Express hybrid creative platform",
+  "main": "server.js",
   "scripts": {
-    "dev": "next dev -p 3001",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "set NODE_ENV=development&& npx webpack serve --progress --mode development",
+    "build": "set NODE_ENV=production&& npx webpack --mode production",
+    "start": "pnpm run server",
+    "server": "tsx bootstrap.ts",
+    "lint": "eslint .",
     "db:push": "npx prisma db push",
     "postinstall": "npx prisma generate",
     "update-password": "tsx scripts/update-admin-password.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
-    "@tailwindcss/cli": "^4.1.16",
+    "@tanstack/react-query": "^5.90.7",
     "@vercel/blob": "^2.0.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
-    "framer-motion": "^11.18.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.548.0",
-    "next": "^16.0.1",
+    "node-fetch": "^3.3.2",
     "prisma": "^6.18.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.5",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "20.19.24",
-    "@types/react": "^18.3.26",
-    "@types/react-dom": "^18.3.7",
-    "autoprefixer": "^10.4.21",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "10",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
     "dotenv-cli": "^10.0.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.5",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
+    "html-webpack-plugin": "^5.6.4",
+    "postcss": "8",
+    "postcss-loader": "^8.2.0",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.18",
+    "ts-loader": "^9.5.4",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
-  },
-  "prisma": {
-    "schema": "prisma/schema.prisma"
-  },
-  "description": "Airose Studio — Next.js powered creative platform.",
-  "main": "next.config.js",
-  "directories": {
-    "lib": "lib"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ianroseaaronmendoza-cmd/airose-studio.git"
-  },
-  "keywords": [],
-  "author": "Ian Mendoza",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ianroseaaronmendoza-cmd/airose-studio/issues"
-  },
-  "homepage": "https://github.com/ianroseaaronmendoza-cmd/airose-studio#readme"
+    "typescript": "^5.9.3",
+    "webpack": "^5.102.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
+  }
 }
