--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,44 +1,23 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "module": "esnext",
+    "target": "ESNext",
+    "module": "ESNext",
+    "jsx": "react-jsx",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "jsx": "react-jsx", // React 17+ JSX transform
-    "incremental": true,
-    "baseUrl": ".",
+    "baseUrl": "src",               // ✅ base of all imports
     "paths": {
-      "@/*": [
-        "*"
-      ]
-    },
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
+      "@/*": ["*"],                // ✅ enables '@/...' aliases
+      "@api/*": ["api/*"],
+      "@types/*": ["types/*"]
+    }
   },
-  "include": [
-    "next-env.d.ts",  // Ensure Next.js types are included
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts",
-    ".next/dev/dev/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
