--- a/package.json
+++ b/package.json
@@ -16,12 +16,31 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.90.7",
+    "@tiptap/core": "3.10.3",
+    "@tiptap/extension-bold": "3.10.3",
+    "@tiptap/extension-bubble-menu": "^3.10.2",
+    "@tiptap/extension-color": "^3.10.3",
+    "@tiptap/extension-font-family": "^3.10.3",
+    "@tiptap/extension-heading": "3.10.3",
+    "@tiptap/extension-highlight": "3.10.3",
+    "@tiptap/extension-image": "^3.10.3",
+    "@tiptap/extension-italic": "3.10.3",
+    "@tiptap/extension-link": "^3.10.3",
+    "@tiptap/extension-text-align": "3.10.3",
+    "@tiptap/extension-text-style": "^3.10.3",
+    "@tiptap/extension-underline": "3.10.3",
+    "@tiptap/pm": "^3.10.2",
+    "@tiptap/react": "^3.10.3",
+    "@tiptap/starter-kit": "^3.10.3",
     "@vercel/blob": "^2.0.0",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "framer-motion": "^12.23.24",
@@ -29,8 +48,8 @@
     "lucide-react": "^0.548.0",
     "node-fetch": "^3.3.2",
     "prisma": "^6.18.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "slugify": "^1.6.6"
@@ -46,9 +65,8 @@
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.0",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "autoprefixer": "10",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
