--- a/package.json
+++ b/package.json
@@ -15,25 +15,19 @@
     "update-password": "tsx scripts/update-admin-password.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.18.0",
+    "@prisma/client": "6.17.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.90.7",
-    "@tiptap/core": "3.10.3",
-    "@tiptap/extension-bold": "3.10.3",
-    "@tiptap/extension-bubble-menu": "^3.10.2",
-    "@tiptap/extension-color": "^3.10.3",
-    "@tiptap/extension-font-family": "^3.10.3",
-    "@tiptap/extension-heading": "3.10.3",
+    "@tiptap/extension-bold": "2.3.1",
+    "@tiptap/extension-bubble-menu": "^2.3.1",
+    "@tiptap/extension-color": "^2.3.1",
+    "@tiptap/extension-font-family": "^2.3.1",
+    "@tiptap/extension-heading": "2.3.1",
     "@tiptap/extension-highlight": "3.10.3",
-    "@tiptap/extension-image": "^3.10.3",
-    "@tiptap/extension-italic": "3.10.3",
-    "@tiptap/extension-link": "^3.10.3",
-    "@tiptap/extension-text-align": "3.10.3",
-    "@tiptap/extension-text-style": "^3.10.3",
-    "@tiptap/extension-underline": "3.10.3",
-    "@tiptap/pm": "^3.10.2",
-    "@tiptap/react": "^3.10.3",
-    "@tiptap/starter-kit": "^3.10.3",
+    "@tiptap/extension-italic": "2.3.1",
+    "@tiptap/extension-link": "^2.3.1",
+    "@tiptap/extension-text-style": "^2.3.1",
+    "@tiptap/extension-underline": "2.3.1",
     "@vercel/blob": "^2.0.0",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
@@ -46,12 +40,13 @@
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.548.0",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
-    "prisma": "^6.18.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
+    "sharp": "^0.34.5",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
@@ -59,14 +54,23 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
+    "@tiptap/core": "2.7.3",
+    "@tiptap/extension-horizontal-rule": "2.7.3",
+    "@tiptap/extension-image": "2.7.3",
+    "@tiptap/extension-text-align": "2.7.3",
+    "@tiptap/pm": "2.7.3",
+    "@tiptap/react": "2.7.3",
+    "@tiptap/starter-kit": "2.7.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "@types/sharp": "^0.32.0",
     "autoprefixer": "10",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
@@ -75,6 +79,7 @@
     "html-webpack-plugin": "^5.6.4",
     "postcss": "8",
     "postcss-loader": "^8.2.0",
+    "prisma": "6.17.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.18",
     "ts-loader": "^9.5.4",
