Fix project creation and image upload in ProjectsEditor

--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@tiptap/extension-bold": "2.3.1",
     "@tiptap/extension-bubble-menu": "^2.3.1",
     "@tiptap/extension-color": "^2.3.1",
+    "@tiptap/extension-dropcursor": "^3.10.7",
     "@tiptap/extension-font-family": "^2.3.1",
     "@tiptap/extension-heading": "2.3.1",
     "@tiptap/extension-highlight": "3.10.3",
     "@tiptap/extension-italic": "2.3.1",
     "@tiptap/extension-link": "^2.3.1",
+    "@tiptap/extension-placeholder": "^3.10.7",
     "@tiptap/extension-text-style": "^2.3.1",
     "@tiptap/extension-underline": "2.3.1",
     "@vercel/blob": "^2.0.0",
@@ -46,6 +48,7 @@
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
+    "sanitize-html": "^2.17.0",
     "sharp": "^0.34.5",
     "slugify": "^1.6.6"
   },
