--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/sharp": "^0.32.0",
     "autoprefixer": "10",
     "babel-loader": "^10.0.0",
+    "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
     "dotenv-cli": "^10.0.0",
     "eslint": "^8.57.1",
